Changelog
=========

12.8-dev0 - (unreleased)
---------------------

12.7 - (2019-01-28)
---------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

12.6 - (2019-01-17)
---------------------
* Change: Revert cover colorspace to sRGB
  [avoinea refs #101483]

12.5 - (2018-12-05)
---------------------
* Change: Update cover colorspace to CMYK to work with ghostscript 9.26+
  [avoinea refs #99812]

12.4 - (2018-08-28)
---------------------
* Feature: Use rsvg-convert to convert SVG to PNG or fallback to ImageMagick
  [avoinea refs #97843]

12.3 - (2018-08-22)
---------------------
* Change: Update to wkhtmltopdf 0.12.4 (add ----disable-smart-shrinking option)
  [avoinea refs #97586]
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]
* Change: fix tests to run on Plone 4.3.17
  [alecghica refs #96974]

12.2 - (2018-04-20)
-------------------
* Change: Possibility to group download info within AsyncInfo wrapper
  [avoinea]

12.1 - (2017-12-12)
-------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

12.0 - (2017-11-07)
-------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]
* Change: improved logging
  [alecghica refs #88578]

11.9 - (2017-06-26)
-------------------
* Change: Remove hard-dependency on plone.stringinterp
  [avoinea]
* Bug fix: Fixed imagemagick convert command, added colorspace parameter
  and page number parameter
  [zoltan_andras refs #85638]

11.8 - (2017-05-22)
-------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

11.7 - (2017-05-15)
-------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

11.6 - (2017-05-08)
-------------------
* Change: removed pdf.header title values if we print within collection.pdf.body
  since printing multiple pages will result in wrong title as soon as we print
  the next object